# auditoria-pedidos-recusados-2025

./: README.md  pyproject.toml  requirements.txt
config/: settings.yaml
dataset/output/: .part-00000-1872f710-336c-47fc-920d-9f8146d89f9c-c000.snappy.parquet.crc  .part-00000-1913edd2-5226-4d81-84c0-a767359e7259-c000.snappy.parquet.crc  .part-00000-294f3216-fbf9-44af-86fb-5f70a2b86b2f-c000.snappy.parquet.crc  .part-00000-4892bb4e-c190-4d53-87cf-39becd0240e9-c000.snappy.parquet.crc  .part-00000-c9381c56-1d84-46e6-a1df-1832051da342-c000.snappy.parquet.crc  .part-00000-f51bd392-83ae-4f73-a513-84b82c1f5211-c000.snappy.parquet.crc  part-00000-1872f710-336c-47fc-920d-9f8146d89f9c-c000.snappy.parquet  part-00000-1913edd2-5226-4d81-84c0-a767359e7259-c000.snappy.parquet  part-00000-294f3216-fbf9-44af-86fb-5f70a2b86b2f-c000.snappy.parquet  part-00000-4892bb4e-c190-4d53-87cf-39becd0240e9-c000.snappy.parquet  part-00000-c9381c56-1d84-46e6-a1df-1832051da342-c000.snappy.parquet  part-00000-f51bd392-83ae-4f73-a513-84b82c1f5211-c000.snappy.parquet
src/: main.py
src/config/: settings.py
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
src/session/: spark_session.py
tests/: conftest.py
tests/unit/: test_transformation.py
